--- a/bookStoreApp/src/app/app.component.html
+++ b/bookStoreApp/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div>
-  <h1>Head</h1>
+ <a routerLink="/about-us">About us</a>
+ <a routerLink="/how-it-works">How it works</a>
+ <a routerLink="/auth/login">Login</a>
+ <a routerLink="/public/all-books">All books</a>
+ <a [routerLink]="['/public/book-details','1','author','2']">Details from App</a>
 </div>
 <router-outlet></router-outlet>
-<div>
-  <h1>Footer</h1>
-</div>
