Navigate to a URL from component file

--- a/bookStoreApp/src/app/auth/components/login/login.component.html
+++ b/bookStoreApp/src/app/auth/components/login/login.component.html
@@ -2,3 +2,5 @@
 <p>name: {{name}}</p>
 <p>email: {{email}}</p>
 <p>id: {{id}}</p>
+<button (click)="goToSignup()">Signup</button>
+<button (click)="goToBookDetails(122,222)">Book Details</button>
